// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendCorrespondence connector mapStateToProps generates the correct props 1`] = `
Object {
  "arrear": Object {
    "bar": "baz",
    "businessUnit": "PRH",
    "id": "foo",
    "legalReferralCase": Object {
      "formName": "Friendly Form Name | legalReferralCaseFormName",
      "lastSubmissionId": "DEF456",
    },
    "nospServeError": false,
    "tenancyId": "ABC123",
  },
  "breadcrumb": Array [
    Object {
      "href": "#{Dashboards.Core.CustomerBaseURL}",
      "id": "breadcrumb-dashboard",
      "label": "Dashboard",
    },
    Object {
      "id": "breadcrumb-arrearsDashboard",
      "label": "My arrears",
      "to": "/",
    },
    Object {
      "label": "Arrears details",
      "to": "/arrears-details/foo",
    },
    Object {
      "id": "breadcrumb-Send correspondence",
      "label": "Send correspondence",
    },
  ],
  "errorText": Object {
    "addressCity": "Please enter city",
    "addressLine1": "Please enter address line 1",
    "addressLine2": "Please enter address line 2",
    "addressLine3": "Please enter address line 3",
    "addressPostcode": "Please enter post code",
    "emailInvalid": "Email not valid",
    "emailMissing": "Please enter email",
    "fatalError": "Generation failed. Please contact IT",
    "mergeFieldMissingData": "Please enter data for {field}",
    "mergeFieldMissingDataInvalidData": "Validation failed for {field}",
    "mobileInvalid": "Phone not valid",
    "mobileMissing": "Please enter mobile phone",
    "noTemplateFound": "No template found, please contact your IT help desk",
    "printMethodMissing": "Please enter a print method",
    "recipient": "Please select a recipient",
    "retriableError": "Correspondence merge failed. Please retry. If the problem persists please contact IT",
    "sendingMethod": "Please select a sendingMethod",
    "template": "Please select a template",
  },
  "genericContactITErrorText": "We have encountered an issue whilst trying to retrieve this information. If the issue persists, contact your IT team",
  "heading": "Send correspondence",
  "labels": Object {
    "address": "Address",
    "addressCity": "City",
    "addressLine1": "Line 1",
    "addressLine2": "Line 2",
    "addressLine3": "Line 3",
    "addressPostcode": "Post code",
    "backButton": "back",
    "closeTemplate": "Close",
    "decline": "Decline",
    "emailAddress": "Email Address",
    "generateDraft": "Generate Draft Correspondence",
    "generatedCorrespondence": "Generated Correspondence",
    "letterPrintingMethods": "Letter printing methods",
    "mailingHouse": "Select a mailing house",
    "mobilePhone": "Mobile phone",
    "nextButton": "next",
    "previewTemplate": "Preview {templateName}",
    "printLocally": "Print letter(s) locally",
    "printViaMailingHouse": "Print and send letter(s) via mailing house",
    "recipient": "Correspondence recipient",
    "retryGenerateDraft": "Retry",
    "sendingMethod": "How do you want to contact 3rd party?",
    "submitButton": "submit",
    "template": "Select correspondence template",
    "viewPreview": "View preview",
    "viewPreviewsBeforeProceeding": "You need to view each of the following correspondence previews before proceeding.",
    "viewTemplate": "View selected template",
  },
  "recipients": Array [
    Object {
      "name": "Customer(s)",
      "value": "customer",
    },
    Object {
      "name": "Third party",
      "value": "thirdparty",
    },
  ],
  "redirectToCustomiseCorrespondence": [Function],
  "redirectToDetailsPage": [Function],
  "templates": Array [
    Object {
      "id": "346c840d-ffbf-e811-80cf-005056825b41",
      "name": "Template for Customer 1",
      "potentialSendingMethods": Array [
        "System",
      ],
      "templatePreviewImageLink": "img",
    },
    Object {
      "id": "35131c95-ffbf-e811-80cf-005056825b41",
      "name": "Template for Customer 2 - Folio",
      "potentialSendingMethods": Array [
        "System",
      ],
      "templatePreviewImageLink": null,
    },
  ],
  "templatesError": false,
  "templatesLoading": false,
}
`;

exports[`SendCorrespondence connector mergeProps generates the correct props 1`] = `
Object {
  "bar": "baz",
  "closeTemplate": [Function],
  "errorText": Object {
    "addressCity": "Please enter city",
    "addressLine1": "Please enter address line 1",
    "addressLine2": "Please enter address line 2",
    "addressLine3": "Please enter address line 3",
    "addressPostcode": "Please enter post code",
    "emailInvalid": "Email not valid",
    "emailMissing": "Please enter email",
    "fatalError": "Generation failed. Please contact IT",
    "mergeFieldMissingData": "Please enter data for {field}",
    "mergeFieldMissingDataInvalidData": "Validation failed for {field}",
    "mobileInvalid": "Phone not valid",
    "mobileMissing": "Please enter mobile phone",
    "noTemplateFound": "No template found, please contact your IT help desk",
    "printMethodMissing": "Please enter a print method",
    "recipient": "Please select a recipient",
    "retriableError": "Correspondence merge failed. Please retry. If the problem persists please contact IT",
    "sendingMethod": "Please select a sendingMethod",
    "template": "Please select a template",
  },
  "genericContactITErrorText": "We have encountered an issue whilst trying to retrieve this information. If the issue persists, contact your IT team",
  "getTemplates": [Function],
  "history": Object {
    "push": [Function],
  },
  "labels": Object {
    "address": "Address",
    "addressCity": "City",
    "addressLine1": "Line 1",
    "addressLine2": "Line 2",
    "addressLine3": "Line 3",
    "addressPostcode": "Post code",
    "backButton": "back",
    "closeTemplate": "Close",
    "decline": "Decline",
    "emailAddress": "Email Address",
    "generateDraft": "Generate Draft Correspondence",
    "generatedCorrespondence": "Generated Correspondence",
    "letterPrintingMethods": "Letter printing methods",
    "mailingHouse": "Select a mailing house",
    "mobilePhone": "Mobile phone",
    "nextButton": "next",
    "previewTemplate": "Preview {templateName}",
    "printLocally": "Print letter(s) locally",
    "printViaMailingHouse": "Print and send letter(s) via mailing house",
    "recipient": "Correspondence recipient",
    "retryGenerateDraft": "Retry",
    "sendingMethod": "How do you want to contact 3rd party?",
    "submitButton": "submit",
    "template": "Select correspondence template",
    "viewPreview": "View preview",
    "viewPreviewsBeforeProceeding": "You need to view each of the following correspondence previews before proceeding.",
    "viewTemplate": "View selected template",
  },
  "match": Object {
    "params": Object {
      "arrearsId": "foo",
    },
  },
  "onBack": [Function],
  "onNext": [Function],
  "openTemplate": [Function],
  "recipients": Array [
    Object {
      "name": "Customer(s)",
      "value": "customer",
    },
    Object {
      "name": "Third party",
      "value": "thirdparty",
    },
  ],
  "resetData": [Function],
  "templates": Array [
    Object {
      "id": "346c840d-ffbf-e811-80cf-005056825b41",
      "name": "Template for Customer 1",
      "potentialSendingMethods": Array [
        "System",
      ],
      "templatePreviewImageLink": "img",
    },
    Object {
      "id": "35131c95-ffbf-e811-80cf-005056825b41",
      "name": "Template for Customer 2 - Folio",
      "potentialSendingMethods": Array [
        "System",
      ],
      "templatePreviewImageLink": null,
    },
  ],
  "templatesError": false,
  "templatesLoading": false,
  "updatePageHeader": [Function],
}
`;
